--- a/KGSWebAGVSystemAPI.csproj
+++ b/KGSWebAGVSystemAPI.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.0.236.4</AssemblyVersion>
+    <AssemblyVersion>1.0.236.14</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="nini-core" Version="0.9.2.16" />
   </ItemGroup>
 
 </Project>
